[package]
name = "xus-miner"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Standalone SOV/XUS Stratum CPU miner"

[[bin]]
name = "xus-miner"
path = "src/main.rs"

[dependencies]
# Keep the native surface intentionally narrower than eframe defaults: OpenGL,
# bundled fonts, and X11 only. eframe still requires its clipboard/link support;
# that unavoidable surface is tracked by Cargo.lock and the RustSec gate.
eframe = { version = "=0.35.0", default-features = false, features = ["default_fonts", "glow", "x11"] }
blake3 = "=1.8.5"
borsh = { version = "=1.8.0", features = ["derive"] }
hex = "=0.4.3"
# Supplies the checksummed cross-platform RandomX C library. The miner bypasses
# this crate's unchecked VM constructor through src/randomx_native.rs.
randomx-rs = "=1.4.1"
serde_json = "=1.0.151"
sha2 = "=0.11.0"
# RAM-only refreshes power the GUI's conservative RandomX preflight. Disable
# unrelated process, disk, network, component, and user inventory features.
sysinfo = { version = "=0.39.6", default-features = false, features = ["system"] }

[lints.rust]
unsafe_code = "deny"
